tests/typechecker/should_pass/overload_builtins_let.csp
P = 
	let
		union = 2
	within
		union+2
