tests/typechecker/should_fail/parser_let_transparent_definition.csp
P = let
		transparent chase
	within P
